<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_normal" />

        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!-- TODO: Add visual styling and content -->
            <TextView
                android:id="@+id/search_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--        &lt;!&ndash; TODO: Add data binding value &ndash;&gt;-->
            <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line_1_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_line_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_line_1_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.addressLine1}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line_2_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_line_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_line_2_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.addressLine2}" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--        &lt;!&ndash; TODO: Add data binding value &ndash;&gt;-->
            <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!--        &lt;!&ndash; TODO: Add data binding value &ndash;&gt;-->
                <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="textPostalAddress"
                        android:text="@={viewModel.city}"
                        app:layout_constraintStart_toStartOf="parent" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--        &lt;!&ndash; TODO: Add default values from provided resources  &ndash;&gt;-->
                <!--        &lt;!&ndash; TODO: Add data binding value &ndash;&gt;-->
                <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
                <Spinner
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:inputType="textPostalAddress" />

            </LinearLayout>


            <!--        &lt;!&ndash; TODO: Add data binding value &ndash;&gt;-->
            <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zip_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_zip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/zip_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@={viewModel.zip}" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--        &lt;!&ndash; TODO: Add visual styling and label &ndash;&gt;-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_find_my_representatives"
                app:layout_constraintTop_toBottomOf="@id/zip_text_input_layout" />

            <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/use_my_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text_use_my_location"
                app:layout_constraintTop_toBottomOf="@id/search_button" />

        </LinearLayout>

        <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_container" />

        <!--        &lt;!&ndash; TODO: Add Representatives RecyclerView &ndash;&gt;-->

        <!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            tools:listitem="@layout/view_holder_representative" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>