<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.android.politicalpreparedness.util.DateUtils" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_normal"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.uiState.election.name}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_small"
            android:gravity="center_vertical"
            android:text="@{DateUtils.formatLocalDate(viewModel.uiState.election.electionDay)}"
            android:textAppearance="?textAppearanceBodyLarge"
            app:drawableStartCompat="@drawable/ic_event_black_24dp"
            app:drawableTint="?colorOnSurface"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            app:visibleGone="@{viewModel.uiState.showDate}"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/label_election_information"
            android:textAppearance="?textAppearanceTitleLarge"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:visibleGone="@{viewModel.uiState.hasElectionInformation}" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:textAppearance="?textAppearanceBodyLarge"
            app:html="@{@string/html_format_voting_locations(viewModel.uiState.votingLocationFinderUrl)}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:visibleGone="@{viewModel.uiState.showVotingLocation}"
            tools:text="Voting Locations" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:textAppearance="?textAppearanceBodyLarge"
            app:html="@{@string/html_format_ballot_information(viewModel.uiState.ballotInfoUrl)}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:visibleGone="@{viewModel.uiState.showBallotInfo}"
            tools:text="Ballot Info" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address"
            app:visibleGone="@{viewModel.uiState.showAddress}" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/label_address"
            android:textAppearance="?textAppearanceTitleLarge"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:visibleGone="@{viewModel.uiState.showAddress}" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:lineSpacingMultiplier="1.3"
            android:text="@{viewModel.uiState.address.toFormattedString()}"
            android:textAppearance="?textAppearanceBodyLarge"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:visibleGone="@{viewModel.uiState.showAddress}"
            tools:text="Address 1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.uiState.isFollowing ?  @string/button_text_unfollow_election : @string/button_text_follow_election}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Follow Election" />

        <ImageView
            android:id="@+id/loading_indicator"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/content_desc_loading_image"
            app:isLoading="@{viewModel.uiState.isLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loading_animation"
            app:visibleGone="@{viewModel.uiState.isLoading}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.retry()}"
            android:text="@string/button_text_retry"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/follow_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{viewModel.uiState.loadingError != null}"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/upcoming_elections_loading_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:textAppearance="?textAppearanceCaption"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/retry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:uiMessage="@{viewModel.uiState.loadingError}"
            app:visibleGone="@{viewModel.uiState.loadingError != null}"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>